# Oubinity

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  Minecraft.sln  README.md
Minecraft/: CMakeLists.txt  Minecraft.vcxproj  Minecraft.vcxproj.filters  Readme.MD  imgui.ini
Minecraft/assets/: demo_colormap3.png.bak  generatedworld_high-res-heightmap.tiff
Minecraft/dependencies/GLAD/glad/: glad.h
Minecraft/imgui/: imgui.cpp
Minecraft/shaders/: blockFragment.glsl  blockVertex.glsl  chunkFragment.glsl  chunkVertex.glsl  gradientFragment.glsl  gradientVertex.glsl  skyFragment.glsl  skyVertex.glsl  skyboxFragment.glsl  skyboxVertex.glsl  waterVertex.glsl
Minecraft/src/: Block.h  BlockMesh.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkShader.cpp  FrameBuffer.h  Keyboard.cpp  Keyboard.h  Loader.cpp  Loader.h  Mesh.cpp  Mesh.h  Minecraft.cpp  Mouse.cpp  Mouse.h  PlayerInput.cpp  PlayerInput.h  Ray.cpp  Ray.h  Settings.h  Shader.cpp  Shader.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h  WorldGenerator.cpp  WorldGenerator.h  glad.c
Minecraft/src/block/: Block.h  BlockArray.cpp  BlockArray.h  BlockMesh.h  BlockStorage.cpp  BlockStorage.h  PaletteBlockStorage.cpp  PaletteBlockStorage.h  PaletteChunkView.cpp  PaletteChunkView.h
Minecraft/src/chunk/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkMeshPacker.cpp  ChunkMeshPacker.h  ChunkSize.h  ChunksMap.h  Face.h  Mesh.cpp  Mesh.h  MeshData.h  TerrainGenerator.cpp  TerrainGenerator.h  Vertex.h  VertexCompresser.cpp  VertexCompresser.h  WorldGenerator.cpp  WorldGenerator.h
Minecraft/src/frustum/: AABox.cpp  Frustum.h  Plane.cpp  Plane.h
Minecraft/src/gpu_loader/: ChunkMeshLoader.cpp  ChunkMeshLoader.h  DAIC.h  GPUSkyboxLoader.cpp  GPUSkyboxLoader.h  Loader.cpp  Loader.h  SkyLoader.cpp  SkyLoader.h  SkyboxLoader.cpp  StaticVertexPool.cpp  StaticVertexPool.h  VAOBinder.cpp  VAOBinder.h  VertexPool.cpp  VertexPool.h  Zone.h  ZoneVertexPool.cpp  ZoneVertexPool.h
Minecraft/src/gui/: GuiLayout.cpp  GuiLayout.h  ImGuiInfoWindow.cpp  ImGuiInfoWindow.h  ImGuiLogsWindow.cpp  ImGuiLogsWindow.h  ImGuiSettingsWindow.cpp  ImGuiSettingsWindow.h  ImGuiUIManager.h  ImGuiWindow.cpp  ImGuiWindow.h
Minecraft/src/io/: Mouse.h  Window.cpp  Window.h
Minecraft/src/level_of_detail/: LevelOfDetail.h
Minecraft/src/renderer/: ChunkBorder.h  ChunkRenderer.cpp  ChunkRenderer.h  ChunkRendererSettings.h  ChunkSlidingWindow.cpp  ChunkSlidingWindow.h  GradientRenderer.cpp  GradientRenderer.h  MasterRenderer.cpp  MasterRenderer.h  Renderer.cpp  Renderer.h  SkyRenderer.cpp  SkyRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  WaterRenderer.cpp
Minecraft/src/shader/: GradientShader.h  SceneShader.cpp  SceneShader.h  Shader.cpp  Shader.h  SkyShader.cpp  SkyShader.h  SkyboxShader.h  WaterShader.cpp
Minecraft/src/skybox/: SkyboxMesh.h
Minecraft/src/terrain_generation/: BiomeGenerator.cpp  BiomeGenerator.h  ChunkLayerHandler.cpp  ChunkLayerHandler.h  HeightMap.h  LayerGenerator.cpp  LayerGenerator.h  NoiseGenerator.h  NoiseMapTypes.h  NoiseSettings.h  ShapeGenerator.cpp  ShapeGenerator.h  TerrainGenerationTypes.h  TerrainGenerator.cpp  TerrainGenerator.h
Minecraft/src/tree/: BranchGenerator.cpp  BranchGenerator.h  Tree.cpp  Tree.h
Oubinity/: CMakeLists.txt  imgui.ini
Oubinity/dependencies/FastNoise2/: .gitignore
Oubinity/dependencies/glfw/: .gitignore
Oubinity/dependencies/glfw/src/: fractional-scale-v1-client-protocol-code.h  viewporter-client-protocol.h  wayland-client-protocol-code.h  wayland-client-protocol.h  xdg-decoration-unstable-v1-client-protocol.h
Oubinity/imgui/: imgui_internal.h
Oubinity/shaders/: chunkVertex.glsl  gradientVertex.glsl  waterFragment.glsl
Oubinity/src/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Oubinity.cpp  PlayerInput.cpp  PlayerInput.h  Ray.cpp  Ray.h  Settings.h  TextureManager.cpp  TextureManager.h  Util.h  UtilDebug.h  loguru.cpp
Oubinity/src/block/: Block.h  BlockArray.cpp  BlockArray.h  BlockMesh.h  BlockStorage.cpp  BlockStorage.h
Oubinity/src/chunk/: Chunk.cpp  Chunk.h  ChunkSize.h  ChunksMap.h  Face.h  Vertex.h
Oubinity/src/frustum/: AABox.cpp  AABox.h  Frustum.cpp  Frustum.h  Plane.cpp  Plane.h
Oubinity/src/gpu_loader/: SkyLoader.cpp  SkyLoader.h  SkyboxLoader.cpp  SkyboxLoader.h  StaticVertexPool.cpp  StaticVertexPool.h  VAOBinder.cpp  VAOBinder.h  WaterLoader.cpp  WaterLoader.h  Zone.h  ZoneVertexPool.cpp  ZoneVertexPool.h
Oubinity/src/gui/: GuiLayout.cpp  GuiLayout.h  GuiSceneWindow.cpp  GuiSceneWindow.h  GuiUIManager.cpp  GuiUIManager.h  GuiWindow.cpp  GuiWindow.h  ImGuiSceneWindow.cpp  ImGuiSceneWindow.h  ImGuiUIManager.cpp  ImGuiUIManager.h  ImGuiWindow.cpp  ImGuiWindow.h
Oubinity/src/io/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Window.cpp  Window.h
Oubinity/src/level_of_detail/: LevelOfDetail.h
Oubinity/src/renderer/: ChunkBorder.h  ChunkRenderer.cpp  ChunkRenderer.h  ChunkRendererSettings.h  ChunkSlidingWindow.cpp  ChunkSlidingWindow.h  GradientRenderer.cpp  GradientRenderer.h  MasterRenderer.cpp  MasterRenderer.h  Renderer.cpp  Renderer.h  SkyRenderer.cpp  SkyRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  WaterRenderer.cpp  WaterRenderer.h
Oubinity/src/shader/: ChunkShader.cpp  ChunkShader.h  GradientShader.cpp  GradientShader.h  SceneShader.cpp  SceneShader.h  Shader.cpp  Shader.h  SkyShader.cpp  SkyShader.h  SkyboxShader.cpp  SkyboxShader.h  WaterShader.cpp  WaterShader.h
Oubinity/src/skybox/: SkyboxMesh.h
Oubinity/src/terrain_generation/: TerrainGenerationTypes.h  TerrainGenerator.cpp  TerrainGenerator.h
Oubinity/src/terrain_generation/preloaded_generation/: FileMapParser.cpp  FileMapParser.h  PreloadedGenerator.cpp  PreloadedGenerator.h
Oubinity/src/terrain_generation/procedural_generation/: DecorationGenerator.cpp  DecorationGenerator.h  ProceduralGenerator.cpp  ProceduralGenerator.h
Oubinity/src/tree/: BranchGenerator.cpp  BranchGenerator.h  Tree.cpp  Tree.h
Oubinity/src/water/: WaterMesh.h
(+73 files in other folders)
